# seed-quickstart

./: Cargo.toml  README.md  index.html
.github/workflows/: main.yml
src/: lib.rs
